--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,14 +4,26 @@
 	letter-spacing: 0.1em;
 }
 
-body {
-	margin-top: 70px;
-}
-
 main.maincontent {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-template-rows: repeat(3,1fr);
 	padding: 2vh;
 	grid-gap: 1vh;
+	min-height: 100vh;
+}
+
+#mainnav{
+	position: sticky;
+	top: 0;
+}
+
+#headnav{
+	width: 100%;
+}
+
+#navbarbrand {
+	background-color: #48322E;
+	box-shadow: 4px 4px 2px 0px rgba(0, 0, 0, 0.5);
+	border-radius: 5%;
 }
