--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,34 @@
+/*****************/
+/*****************/
+/*    CSS RESET  */
+/*****************/
+/*****************/
+
 *{
 	margin: 0;
 	padding: 0;
 	letter-spacing: 0.1em;
+	font-size: 0.9rem;
 }
+
+/*****************/
+/*****************/
+/*  Navigation   */
+/*****************/
+/*****************/
+nav#secondnav{
+	max-height: 6vh;
+}
+nav#mainnav{
+	position: sticky;
+	top: 0;
+}
+
+/*****************/
+/*****************/
+/*  Main Content */
+/*****************/
+/*****************/
 
 main.maincontent {
 	display: grid;
@@ -11,19 +37,4 @@ main.maincontent {
 	padding: 2vh;
 	grid-gap: 1vh;
 	min-height: 100vh;
-}
-
-#mainnav{
-	position: sticky;
-	top: 0;
-}
-
-#headnav{
-	width: 100%;
-}
-
-#navbarbrand {
-	background-color: #48322E;
-	box-shadow: 4px 4px 2px 0px rgba(0, 0, 0, 0.5);
-	border-radius: 5%;
 }
