Added users, orders tables for admin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
 
 :root{
-	--theme-color: #00843C;
+	--theme-color: #87004a;
 	--vh: 0.85vh;
 	--vw: 0.85vw;
 	--scolor: green;
