--- a/admin/adminassets/css/adminstyle.css
+++ b/admin/adminassets/css/adminstyle.css
@@ -34,6 +34,12 @@ h1,h2,h3,h4,h5,h6,.h4{
 	display: grid;
 }
 
+main.admincontent{
+	padding: 2vh;
+	margin: 2vh;
+	margin-bottom: 10vh;
+}
+
 /*
 *
 * items.php
@@ -80,9 +86,13 @@ table.dataTable thead {
 	color: white;
 }
 
-table.dataTable input {
+table.dataTable input,
+table.dataTable textarea{
 	width: 100%;
+	max-height: 100%;
 }
+
+
 
 table.dataTable thead th{
 	border: 0;
@@ -200,15 +210,42 @@ input{
  * Orders.php
  */
  .grid.ordercontainer{
-	padding: 5vh;
+	max-width: 80vw;
+	margin: 0 auto;
+
  }
+
+.grid.ordercontainer thead,
+.grid.ordercontainer tbody{
+	max-width: 80vw;
+}
 
 	.grid.orders{
 		grid-template-columns: repeat(5,1fr);
 		border-bottom: 1px dotted black;
+		word-wrap: break-word;
 	}
 
-	.grid.orders h5,
-	.grid.orders div{
+	.grid.orders p,
+	.grid.orders td{
 		text-align: center;
 	}
+
+	.grid.orders td:nth-child(3){
+		width: 50%;
+		margin: 0 auto;
+	}
+	.grid.orderitems{
+		grid-template-columns: 1fr 1fr;
+		text-align: center;
+	}
+		.grid.orderitems:nth-child(even){
+			background: black;
+			color: white;
+			font-weight: bolder;
+		}
+
+.userscontainer tr:nth-child(even){
+	background: rgba(0,0,0,0.2);
+	font-weight: bolder;
+}
